--- a/app/src/main/res/layout/fragment_find.xml
+++ b/app/src/main/res/layout/fragment_find.xml
@@ -1,16 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    android:background="@drawable/find_background"
+    android:background="@drawable/app_background"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <ImageView
         android:id="@+id/new_plant_image"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="20dp"
+        android:layout_margin="20dp"
         android:layout_width="200dp"
         android:layout_height="200dp"
+        android:background="@drawable/image_border"
         android:contentDescription="植物图片"/>
     <Button
         android:id="@+id/takephoto"
@@ -53,7 +54,9 @@
         android:text="上传植物数据"
         android:textSize="20sp"
         android:layout_marginTop="10dp"
+        android:padding="5dp"
         android:layout_gravity="center_horizontal"
         android:layout_width="wrap_content"
+        android:background="@drawable/image_border"
         android:layout_height="wrap_content" />
 </LinearLayout>
